After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750589 - jaw_object_initialize not implemented.
jaw_object_initialize not implemented.
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: java-atk-wrapper maintainer(s)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-06-08 18:51 UTC by Magdalen Berns (irc magpie)
Modified: 2015-06-21 17:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to address problem (1.48 KB, patch)
2015-06-08 19:02 UTC, Magdalen Berns (irc magpie)
committed Details | Review
Patch to address problem (1.52 KB, patch)
2015-06-21 17:53 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-06-08 18:51:58 UTC
JawObject does not have the jaw_object_initialize function.
Comment 1 Magdalen Berns (irc magpie) 2015-06-08 19:02:00 UTC
Created attachment 304805 [details] [review]
Patch to address problem
Comment 2 Magdalen Berns (irc magpie) 2015-06-21 17:53:36 UTC
Created attachment 305774 [details] [review]
Patch to address problem