JNI: Create jaw_object_initialize

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=750589